--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
 
     </div>
-</body>LO
+</body>
 <script>
     let submitData =()=>{
         let fname = document.getElementById("fname").value
